<resources>
    <string name="app_name">Thriive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_next_schedule">Upcoming Meeting(s): </string>
    <string name="label_requested">Requested Meeting(s):</string>
    <string name="scheduled">Scheduled</string>
    <string name="requested">Requested</string>
    <string name="shortlisting">Shortlisting</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="label_meeting_request">Who do you want to meet </string>
    <string name="label_meeting_request_attribute_l1">Select the kind of partnership you are looking </string>
    <string name="label_meeting_request1">The business match you\'ve been waiting for is just a click away.</string>
    <string name="label_meeting_request_persona">Who would you like to meet for your </string>
    <string name="request_meeting">Request a Meeting</string>
    <string name="close">Close</string>
    <string name="consulting">Consulting</string>
    <string name="agora_app_id">ed22bc424c1d49d1af31bcb11d187009</string>
    <string name="confirm">Confirm</string>
    <string name="base_url">https://niticode.com/api/</string>
    <string name="done">Done</string>
    <string name="profile">Account Settings</string>
    <string name="preferences">My Preferences</string>
    <string name="history">My Connections</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="change_password">Change Password</string>
    <string name="country_region">Country/Region</string>
    <string name="tags">Tags</string>
    <string name="rateapp">Rate the app</string>
    <string name="your_availability">Your Availability</string>
    <string name="meeting_preference">Meeting preference</string>
    <string name="agora_access_token">006ed22bc424c1d49d1af31bcb11d187009IABpItn8QF6UnUVYQrwBFKWkAYOmRCcPFn2TgvO9i9KrbaHYMoUAAAAAEAAShR76xzxsXwEAAQDGPGxf</string>
    <string name="meeting_request_success">Thank you. \n\nYour meeting is now confirmed.</string>
    <string name="meeting_reschedule_msg">We understand that plans can change. Just be aware that you can only reschedule a confirmed meeting once.</string>
    <string name="meeting_propose_success">Your proposed new time have now been sent for confirmation. \n\nExpect a notification within \n<b>12 hrs</b>.</string>
    <string name="rate_meeting">How was your meeting? </string>
    <string name="rate_meeting1">How happy were you with your match?</string>
    <string name="thankyou">Thank you for your feedback. It helps us improve our platform so we can make sure that every meeting matters.</string>
    <string name="rateapptext">Please rate your experience with Thriive so far?</string>
    <string name="meeting_request">Your meeting request has been submitted.\n\nBusiness-changing meetings start here.</string>
    <string name="meeting_request_close_msg">Are you sure you want to close the meeting request, you will lose all your selections.</string>
    <string name="mr_quide1">Thriive platform received your request</string>
    <string name="mr_quide2">Thriive AI-based people conector is doing the heavy lifting and finding you the best match</string>
    <string name="mr_guide4">"Thriive sets up a 1:1 match of highly releveant professionals. You should receive a notification soon "</string>
    <string name="mr_guide3">The AI engine is shortlisting the highly curated people on the platform</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="no_schedule">You don’t have any meetings:</string>
    <string name="call_message">Your call is going to end in 5 mins.</string>
    <string name="walk">A quick guided tour to get you started</string>
    <string name="submitted">Submitted</string>
    <string name="didnt_get">We didn’t meet</string>
    <string name="desc_experience">How would you describe your experience?</string>
    <string name="good_conversion">Good conversation but not relevant to me</string>
    <string name="not_relevant">Relevant to me but not good conversation</string>
    <string name="waste_time">A waste of time</string>
    <string name="great_match">Great match!</string>
    <string name="tag_expertise">Please select the expertise of the </string>
    <string name="tag_domain">Look up and select the domain of the </string>
    <string name="msg_reshedule">Your meeting has been rescheduled </string>
    <string name="tag_select_one_slot_msg">Limit of 1 time per day. Times are based on standard business hours in the region you’ve selected. Time is displayed in AEDT. </string>
    <string name="tag_slot_limit_reached">You have already selected 3 slots.</string>
    <string name="label_text_box">Please provide additional details of your requirement (160 characters) </string>
    <string name="awaiting">Awaiting Confirmation</string>
    <string name="text_region_msg">We’re in Beta and building our users every day, but we’ll try our best to match you with your selected region.</string>
    <string name="overview">Overview</string>
    <string name="text_select_3_meeting_times">Select 3 preferred meeting dates with 1 time slot per day</string>
    <string name="text_select_3_1_meeting_times">Meetings are 30 mins. Times are based on standard business hours in the region you’ve selected.</string>
    <string name="text_select_4_meeting_times">Unfortunately , the match we found couldn\'t make your preferred time.Please select one of the alternate time slots, as proposed by your match:</string>
    <string name="text_select_5_meeting_times">You’ve proposed the following alternate time slots. Now awaiting confirmation.</string>
    <string name="text_select_6_meeting_times">Times are displayed in (GMT+11:00) Eastern Australia Time</string>
    <string name="tag_camera">Select From Camera</string>
    <string name="tag_support">We understand everyone has different schedules. If you can’t make the provided times please reach out to the Thriive team at:</string>
    <string name="tag_support_1">We’ll try our best to sort something out and make this match work!</string>
    <string name="tag_gallery">Select From Gallery</string>
    <string name="remove_photo">Remove Profile Photo</string>
    <string name="toster_msg">Limit of 1 time per day. Times are based on standard business hours in the region you’ve selected. Time is displayed in AEDT.</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tag_region">Tell us where would you like the </string>
    <string name="no_meeting">No Meetings Scheduled</string>
    <string name="label_no_meeting">Thriive is working hard to find you the right match.
        You should receive a notification within 48 hrs.\n\n
        as text with font weight light and font size the same as the date on the page"</string>
    <string name="label_no_request">There are business-changing possibilities at Thriive.
        Go ahead and request a meeting to find the right person.\n\n as text with font weight light
        and font size the same as the date on the page</string>
    <string name="no_request">No Meetings Requested</string>
    <string name="label_success_meeting">Thriive is now at work to find you the right</string>
    <string name="label_success_meeting1">\n\nExpect a meeting confirmation from your match within</string>
    <string name="no_domain">Sorry, we couldn\'t find what you were looking for.\nTry with a different keyword.</string>
    <string name="account">Account</string>
    <string name="tag_reason">What’s your objective today?</string>
    <string name="privacy">Privacy Policy</string>
    <string name="areas_expertise">Areas of expertise</string>
    <string name="terms">Terms of Service</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="submit">submit</string>
    <string name="internet_dissconnect">Unstable internet connection. Please rejoin the call once your connection stabilises.</string>
    <string name="user_offline">Looks like the other person is having internet issues. Please rejoin once you receive our notification.</string>
    <string name="feedback">Feedback</string>
    <string name="no_domains">No domains found. Please try with a different domain name.</string>
    <string name="seemore">Show more</string>
    <string name="seeless">Show less</string>
    <string name="relevant_match">"Was your match relevant? "</string>
    <string name="experience">How was your conversation </string>
    <string name="app_experience">Rate your experience with\nThriive</string>
    <string name="register">Don’t have an account? <u>Sign-up</u></string>
    <string name="expertise">Expertise</string>
    <string name="my_specialization">Specialisation</string>
    <string name="update">Update</string>
    <string name="linkedin_progress_dialog_message">Loading, Please wait</string>
    <string name="skip">Skip</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="view">View</string>
    <string name="objectives">Objectives</string>
    <string name="interest">Interests</string>
    <string name="helper_expertise">Select your top three areas of expertise.\nThis helps us suggest more relevant matches for you.</string>
    <string name="helper_objective">We understand your requirements may change with time.\n\nSelect up to three objectives. This helps us find the best relevant match for you.</string>
    <string name="helper_interests">Select your top three areas of interests. This helps us suggest more relevant matches for you.</string>
    <string name="signup">Sign-up</string>
    <string name="land_message_flag_new_user">Thriive is an invite-only platform offering high-quality,
        actionable meetings with the people you need, when you need them.
        We allow users on the platform only after reviewing their profile.<br /><br />
        If you’ve previously registered, please go back and login using the same credentials.
        <b>OR,</b> please continue to sign-up on Thriive</string>
    <string name="land_message_flag_waitlist">You’ve been added to the Thriive’s
        <b> <font color='#CE593F'> WAIT LIST! </font> </b><br /><br />
        Thank you for your interest in joining Thriive.
        We are currently overwhelmed by the number of join requests to our platform.
      <br /><br />>Stay tuned for more updates from Thriive!</string>
    <string name="thriive">©Thriive 2020</string>
    <string name="skip_underline"><u>SKIP</u></string>
</resources>