<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@null"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_22dp"
            android:layout_below="@id/img_02"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:text="Thriive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_18dp"
            android:layout_below="@id/img_02"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:textAlignment="center"
            android:textColor="#2B2B51"
            android:text="@string/tag_support" />

        <ImageView
            android:id="@+id/img_02"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:src="@drawable/support_email"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_18dp"
            android:layout_below="@id/img_02"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:textAlignment="center"
            android:textColor="#2B2B51"
            android:text="@string/tag_support_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"></TextView>
            <TextView
                android:id="@+id/label_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_16dp"
                android:layout_below="@id/img_02"
                android:textAllCaps="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/_10dp"
                android:textColor="@color/terracota"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>