<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_background_fragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_weight="0"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_10dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_close"></ImageView>
        <TextView
            android:id="@+id/label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/_18dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/darkGreyBlue"
            android:text="Change Password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_14dp"
            android:layout_marginTop="@dimen/_5dp"
            android:textColor="@color/darkGrey"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_25dp"></TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5dp"
            app:cardElevation="1dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp">
            <EditText
                android:id="@+id/edt_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12dp"
                android:hint="@string/old_password"
                android:textColor="@color/darkGrey"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_14dp"
                android:background="@drawable/rectangle_white"></EditText>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_14dp"
            android:textColor="@color/darkGrey"
            android:layout_marginRight="@dimen/_25dp"
            android:layout_marginLeft="@dimen/_25dp"></TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5dp"
            app:cardElevation="1dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp">
            <EditText
                android:id="@+id/edt_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12dp"
                android:hint="@string/new_password"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_16dp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:background="@drawable/rectangle_white"></EditText>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_14dp"
            android:textColor="@color/darkGrey"
            android:layout_marginRight="@dimen/_25dp"
            android:layout_marginLeft="@dimen/_25dp"></TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5dp"
            app:cardElevation="1dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp">
            <EditText
                android:id="@+id/edt_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12dp"
                android:hint="@string/confirm_password"
                android:textColor="@color/darkGrey"
                android:textSize="@dimen/_16dp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:background="@drawable/rectangle_white"></EditText>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:background="@drawable/filled_circle_terracota"
        android:textColor="@color/whiteTwo"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_14dp"
        android:layout_marginBottom="@dimen/_25dp"
        android:text="@string/change_password"></Button>
</LinearLayout>