<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/transparent_half_circle">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/_18dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:padding="@dimen/_15dp"
            android:textColor="@color/darkGreyBlue"
            android:text="Change Temporary Password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_14dp"
            android:textColor="@color/darkGrey"
            android:layout_marginRight="@dimen/_25dp"
            android:layout_marginLeft="@dimen/_25dp"></TextView>

        <EditText
            android:id="@+id/edt_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/new_password"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_16dp"
            android:drawableRight="@drawable/ic_password_visibility_off"

            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/reactangle_grey_outline"></EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_14dp"

            android:textColor="@color/darkGrey"
            android:layout_marginRight="@dimen/_25dp"
            android:layout_marginLeft="@dimen/_25dp"></TextView>
        <EditText
            android:id="@+id/edt_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:drawableRight="@drawable/ic_password_visibility_off"

            android:hint="@string/confirm_password"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_16dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/reactangle_grey_outline"></EditText>
        >
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/terracota"
        android:background="@drawable/rectangle_white"
        android:textColor="@color/whiteTwo"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_15dp"
        android:text="Update Password"></Button>

    <TextView
        android:id="@+id/txt_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_underline"
        android:layout_margin="@dimen/_20dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/_12dp"
        android:textColor="@color/darkGrey"
        android:gravity="center"></TextView>

</LinearLayout>