<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_background"
    tools:context=".LoginMessageActivity">
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:src="@drawable/thriive"
        android:layout_below="@id/img_close"
        android:layout_centerHorizontal="true"></ImageView>
    <ImageView
        android:id="@+id/img_close"
        android:layout_width="@dimen/_25dp"
        android:layout_height="@dimen/_25dp"
        android:layout_alignParentRight="true"
        android:visibility="visible"
        android:layout_margin="@dimen/_20dp"
        android:src="@drawable/ic_close"></ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="@dimen/_10dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:layout_margin="@dimen/_10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/_18dp"
                    android:layout_weight="0"
                    android:text="Hi, "
                    android:textColor="@color/darkGreyBlue"></TextView>
                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="@dimen/_18dp"
                    android:layout_weight="1"
                    android:textColor="@color/terracota"></TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_15dp"
                android:textColor="@color/darkGreyBlue"></TextView>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="200dp"
                android:layout_height="@dimen/_40dp"
                android:textAllCaps="false"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/_18dp"
                android:visibility="gone"
                android:gravity="center"
                android:layout_margin="@dimen/_20dp"
                android:background="@drawable/filled_circle_terracota"
                android:layout_toRightOf="@id/img_03"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/signup"></Button>
            <Button
                android:id="@+id/btn_close"
                android:layout_width="200dp"
                android:layout_height="@dimen/_40dp"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/_18dp"
                android:visibility="gone"
                android:gravity="center"
                android:layout_margin="@dimen/_20dp"
                android:background="@drawable/filled_circle_terracota"
                android:layout_toRightOf="@id/img_03"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/close"></Button>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/_13dp"
        android:textAlignment="center"
        android:text="@string/thriive"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/darkGreyBlue"></TextView>
</RelativeLayout>